fix horizontal scroll issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,14 @@
-.container-header{
-    width: 100%;
-    height: 400px;
+* {
+    margin:0;
+    box-sizing: border-box;
 }
 .header-desktop{
     margin-top: 100px;
-    width: 100%;
-    margin-left: 5%;
-    margin-right: 5%;
+    display: block;
+}
+.header-mobile{
+    margin-top: 100px;
+    display: none;
 }
 .img-header{
     border-radius: 10px;
@@ -15,6 +17,17 @@
 }
 
 .img-top-product {
-    max-height: 280px;
-    max-width: 280px;
+    height: 200px;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (max-width: 767px) {
+    .header-desktop {
+        display: none; 
+    }
+    .header-mobile {
+        display: block; 
+    }
 }
